# bayesian-precision-recall

./: .gitignore  README.md  pyproject.toml
animations/: 00_derivation.py  01_posterior_update.py  02_compare_models.py  03_transfer_test.py  _make_placeholders.py
examples/: 01_basic_usage.py  02_prob_above_threshold.py  03_model_comparison.py  04_production_transfer.py
src/bayesian_pr/: __init__.py  comparison.py  model.py  visualization.py
tests/: test_model.py
